# mcp-registry

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  DOCKER_HUB_USAGE.md  GEMINI.md  INTELLIJ_SETUP.md  LICENSE  QA.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.4.0.md  SPEC_SYNC.md  docker-compose.dev.yml  docker-compose.yml  init-db-dev.sql  init-db-test.sql  init-db.sql  pom.xml  pyproject.toml  run_mysql_mcp.py  run_postgres_mcp.py  run_tests.py
.dev/: ARCHITECTURE.md
deployment/: contextcore-docker-compose.yml
deployment/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
deployment/test-mysql-mcp/: README.md
docs/: ARCHITECTURE.md  DOCKER_HUB_GUIDE.md  MCP_SERVER_HANDBOOK.md  MODULE_SPECIFICATIONS.md  PROJECT_STRUCTURE.md  README.md  USER_GUIDE.md  USE_CASES.md
docs/data_migration/: kanban_migration.md  migration_coordinator.py  migration_instructions.md
docs/examples/: MCP_CLIENT_EXAMPLES.md
documentation/: CLEAN_ARCHITECTURE_IMPLEMENTATION.md  GETTING_STARTED.md  MCP_SERVERS_USAGE.md  MCP_SERVER_HANDBOOK.md  PROJECT_SUMMARY.md  README.md
documentation/development/: JAVA_PROJECT_OVERVIEW.md
documentation/guides/: FAQ.md  QA.md  QUICK_START.md
documentation/project/: JAVA_MIGRATION_PLAN.md  (+2 more)
mcp-registry-java/: README.md  pom.xml  test-servers.sh
mcp_server/: requirements.txt
scripts/: README_BDD_TESTING.md  deploy.sh  dev.sh  docker-hub-push.sh  generate-bdd-report.py  requirements.txt  run-bdd-tests.bat  run-bdd-tests.sh  start-all.sh  start-contextcore.sh
src/: __init__.py  config.py  docker_main.py  monitoring.py  security.py  server.py  server_old.py
test-mysql-mcp/: docker-compose.test.yml
test-postgres-mcp/: README.md  docker-compose.test.yml
tests/: conftest.py
(+592 files in other folders)
